# ai-news-daily

./: .dockerignore  .gitignore  Procfile  README.md  create_tables.py  example.env  main.py  pyproject.toml  streamlit_app.py  test.py  test_anthropic_scraper.py  test_curator_email_agents.py  test_openai_scraper.py  test_send_email.py  test_youtube_scraper_teacher_logic.py  user_app.py
app/: config.py  daily_runner.py  runner.py  test_db.py
app/agent/: __init__.py  base.py  curator.py  digest.py  email.py  email_template_utils.py
app/database/: create_tables.py  models.py  repositories.py  session.py
app/profiles/: __init__.py  user_profile.py
app/scrapers/: __init__.py  anthropic.py  base.py  openai.py  youtube.py
app/services/: __init__.py  email_service.py
docker/: docker-compose.yml
docs/: EXPLANATION_TRANSCRIPT_API.md  FIX_BUG_PYDANTIC_CONFIG.MD
test/: test_curator_email_agents.py  test_digest_agent.py  test_send_email.py  test_youtube_scaper.py
